# NordicReliquary

./: .gitignore  CMakeLists.txt  README.md  allfiles.txt  plugin_scanner
loot-shim/: Cargo.toml  test_loot  test_loot.c
loot-shim/include/: loot_shim.h
loot-shim/src/: lib.rs
src/: detectLootType.cpp  detectLootType.h  downloadsPanel.cpp  downloadsPanel.h  firstrunwizard.cpp  iniEditorWidget.cpp  iniEditorWidget.h  lootManager.cpp  lootManager.h  main.cpp  mainWindow.cpp  modManager.cpp  modManager.h  pluginManager.cpp  pluginScanner.cpp  plugin_scanner
ui/: firstrunwizard.h  firstrunwizard.ui  mainWindow.h  mainWindow.ui  pluginManager.h
